style(styles): update z-index for fixed positioning

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -10,7 +10,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 9999;
+  z-index: 9;
   clip-path: polygon(0% 0%, 100% 0%, 100% 0px, 0% 0px);
   width: 100%;
 }
